--- a/Code/public/autocomplete/jquery.autocomplete.css
+++ b/Code/public/autocomplete/jquery.autocomplete.css
@@ -34,7 +34,7 @@
 }
 
 .ac_loading {
-	background: white url('indicator.gif') right center no-repeat;
+	background: white url('indicator.gif') right center no-repeat !important;
 }
 
 .ac_odd {
