no need for backstory/overview titles - use title and description

--- a/Code/public/main.css
+++ b/Code/public/main.css
@@ -24,6 +24,10 @@
 .linksholder p{
     margin-bottom: 30px;
 }
+.featured_title{
+    font-weight:bold;
+    font-family: georgia,serif;
+}
 .big-title{
     font-weight:bold;
     font-family: georgia,serif;
