help desk icons

--- a/Code/public/css/foundation.css
+++ b/Code/public/css/foundation.css
@@ -3467,7 +3467,7 @@ ul.pagination {
     clear: both; }
   .accordion .accordion-navigation, .accordion dd {
     display: block;
-    margin-bottom: 0 !important; }
+    margin-bottom: 10px !important; }
     .accordion .accordion-navigation.active > a, .accordion dd.active > a {
       background: #e8e8e8; }
     .accordion .accordion-navigation > a, .accordion dd > a {
