nullify app input values after result

--- a/Code/public/main.css
+++ b/Code/public/main.css
@@ -30,7 +30,8 @@
     color:#fff;
 }
 .footer_section{
-    background-color: #313131;
+    background-color: #010000;
+    height:80px;
 }
 .app_footer{
     text-align: center;
