--- a/Code/public/main.css
+++ b/Code/public/main.css
@@ -1,3 +1,20 @@
+.drug_row{
+    margin-bottom: 20px;
+    background-color: #f5f5f5;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.05);
+    box-shadow: 0 1px 1px rgba(0,0,0,0.05);
+    padding:5px;
+}
+.drug_row img{
+    width:20px;
+    margin-right:10px;
+}
+.drug_price{
+    float:right;
+}
+
 .name{
     background-color: #010000;
     height:90px;
