--- a/Code/public/main.css
+++ b/Code/public/main.css
@@ -6,6 +6,7 @@
     -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.05);
     box-shadow: 0 1px 1px rgba(0,0,0,0.05);
     padding:5px;
+    color: #000 !important;
 }
 .drug_row img{
     width:20px;
