--- a/Code/public/main.css
+++ b/Code/public/main.css
@@ -1,3 +1,7 @@
+.result_proximity{
+    font-size: 0.8em;
+    color: #818181;
+}
 .drug_row{
     margin-bottom: 20px;
     background-color: #f5f5f5;
@@ -6,7 +10,6 @@
     -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.05);
     box-shadow: 0 1px 1px rgba(0,0,0,0.05);
     padding:5px;
-    color: #000 !important;
 }
 .drug_row img{
     width:20px;
