grey footer for apps = less eye sore

--- a/Code/public/main.css
+++ b/Code/public/main.css
@@ -89,7 +89,7 @@
 .app_footer{
     text-align: center;
     padding:3px;
-    background-color: #ed2124;
+    background-color: #7c7c7c;
     color:#fff;
 }
 .app_footer a{
