prominent evidence dossier

--- a/Code/public/main.css
+++ b/Code/public/main.css
@@ -1,3 +1,11 @@
+.evidence{
+    padding:10px;
+    background: #ed2124;
+    color: #fff;
+    /* float: right; */
+    font-weight: bold;
+    font-size: 1.1em;
+}
 .result_proximity{
     font-size: 0.8em;
     color: #818181;
