--- a/Code/public/main.css
+++ b/Code/public/main.css
@@ -174,6 +174,7 @@
     padding:10px;
     background-color:#fff;
     margin-bottom:15px;
+    border:1px solid #efefef;
 }
 .story img{
     float:left;
@@ -183,7 +184,7 @@
     font-family: Vollkorn,serif;
 }
 .story-metadata{
-    font-size: 0.7em;
+    font-size: 0.8em;
     color: #818181;
     text-align:right;
 }
